--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <!-- Hero Section -->
     <div class="main">
       <div class="main__container">
+        <video autoplay muted loop id="bg-video">
+          <source src="/images/video_2022-02-26_10-47-12.mp4" type="video/mp4" />
+      </video>
+
+
         <div class="main__content">
           <h1 class="vocal">Vocal</h1>
           <h2>Recording</h2>
@@ -61,11 +66,9 @@
           <button class="main__btn"><a href="#">Book An Appointment</a></button>
         </div>
         <div class="main__img--container">
-          <!-- <img id="main__img" src="images/compressed-mic.png" /> -->
+          <img id="main__img" src="images/compressed-mic.png" />
 
-          <video autoplay muted loop id="bg-video">
-            <source src="/images/video_2022-02-26_10-47-12.mp4" type="video/mp4" />
-        </video>
+          
         </div>
       </div>
     </div>
