--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section>
       <div class="services">
         <div class="services__container">
-          <div class="service__tag">
+          <!-- <div class="service__tag">
             <p>What We Do</p>
             <h1>Studio Services</h1>
           </div>
@@ -118,7 +118,7 @@
                 Read More
               </button>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
