--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
 </section>
 
 
-<section class="works-and-clients">
+ <section class="works-and-clients">
 
-  <div class="works-and-clients-text">
+   <div class="works-and-clients-text">
       <h2 class="work-and-client-header">
           Our Projects
       </h2>
-      <!-- <p>Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.
+       <!-- <p>Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.
          Explicabo porro magni natus ullam, 
        <br> quia similique dolore enim <br>inventore nulla ea ratione 
-        veniam modi numquam minima v<br>eritatis ipsa a corrupti odit!</p> -->
+        veniam modi numquam minima v<br>eritatis ipsa a corrupti odit!</p>  -->
   </div>
 
   <div class="work-sample-grid">
@@ -272,12 +272,12 @@
           </div>
       </div>
   </div>
-</section>
+</section> 
 
 
 
 
-<section class = "cyclers-team">
+<!-- <section class = "cyclers-team">
         <div class="our-team-wraper">
             <div class="our-team-text">
                 <div class="our-team-header-wraper">
@@ -304,7 +304,7 @@
                     <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
                     <a href="#"><img src="./images/twitter-24.png" alt="" class="team-icon" ></a>
                     </div>
-                    <img src="./images/becky.jpg" alt="" class="team-photo">
+                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="" class="team-photo">
                 </div>
                 <div class="team-detail">
                     <h3 class="team-member-name">Becky</h3>
@@ -313,7 +313,7 @@
                     <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
                     <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
                     </div>
-                    <img src="./images/becky.jpg" alt="" class="team-photo">
+                    <img src="/images/photo_2022-02-23_16-57-00.jpg" alt="" class="team-photo">
                 </div>
                 <div class="team-detail">
                     <h3 class="team-member-name">Becky</h3>
@@ -322,7 +322,7 @@
                     <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
                     <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
                     </div>
-                    <img src="./images/becky.jpg" alt="" class="team-photo">
+                    <img src="/images/photo_2022-02-23_16-57-01.jpg" alt="" class="team-photo">
                 </div>
                 <div class="team-detail">
                     <h3 class="team-member-name">Becky</h3>
@@ -331,13 +331,113 @@
                     <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
                     <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
                     </div>
-                    <img src="./images/becky.jpg" alt="" class="team-photo">
+                    <img src="./images/photo_2022-02-24_13-28-53.jpg" alt="" class="team-photo">
                 </div>
             </div>
         </div>
 
-    </section>
+    </section> -->
 
+
+
+<section>
+
+    <div class="container">
+      <div class="section-title">
+          <h1>Meet My Team</h1>
+      </div>
+
+      <div class="row">
+
+
+          <div class="column">
+              <div class="team">
+                  <div class="team-img">
+                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                  </div>
+                  <div class="team-content">
+                      <h2>Steven</h2>
+                      <h3>CEO & Founder</h3>
+                      <p>Some text goes here that describes about team members</p>
+                      <h4>abc@gmail.com</h4>
+                  </div>
+                  <div class="team-social">
+                      <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                      <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                      <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                      <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                      <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="column">
+              <div class="team">
+                  <div class="team-img">
+                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                  </div>
+                  <div class="team-content">
+                      <h2>Mayra</h2>
+                      <h3>Art Director</h3>
+                      <p>Some text goes here that describes about team members</p>
+                      <h4>abc@gmail.com</h4>
+                  </div>
+                  <div class="team-social">
+                      <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                      <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                      <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                      <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                      <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="column">
+              <div class="team">
+                  <div class="team-img">
+                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                  </div>
+                  <div class="team-content">
+                      <h2>John</h2>
+                      <h3>Developer</h3>
+                      <p>Some text goes here that describes about team members</p>
+                      <h4>abc@gmail.com</h4>
+                  </div>
+                  <div class="team-social">
+                      <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                      <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                      <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                      <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                      <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="column">
+              <div class="team">
+                  <div class="team-img">
+                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                  </div>
+                  <div class="team-content">
+                      <h2>Jennifer</h2>
+                      <h3>Designer</h3>
+                      <p>Some text goes here that describes about team members</p>
+                      <h4>abc@gmail.com</h4>
+                  </div>
+                  <div class="team-social">
+                      <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                      <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                      <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                      <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                      <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+
+  </div>
+</section>
 
     <!-- Footer Section -->
     <footer>
