--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     sizes="132x132"
     href="/images/cycler1-.png"/>
 
+    
+
+
+
   </head>
   <body>
     <!-- Navbar Section -->
@@ -434,6 +438,90 @@
               </div>
           </div>
 
+          <div class="column">
+            <div class="team">
+                <div class="team-img">
+                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                </div>
+                <div class="team-content">
+                    <h2>Steven</h2>
+                    <h3>CEO & Founder</h3>
+                    <p>Some text goes here that describes about team members</p>
+                    <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="team">
+                <div class="team-img">
+                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                </div>
+                <div class="team-content">
+                    <h2>Mayra</h2>
+                    <h3>Art Director</h3>
+                    <p>Some text goes here that describes about team members</p>
+                    <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="team">
+                <div class="team-img">
+                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                </div>
+                <div class="team-content">
+                    <h2>John</h2>
+                    <h3>Developer</h3>
+                    <p>Some text goes here that describes about team members</p>
+                    <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="team" >
+                <div class="team-img">
+                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                </div>
+                <div class="team-content">
+                    <h2>Jennifer</h2>
+                    <h3>Designer</h3>
+                    <p>Some text goes here that describes about team members</p>
+                    <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+
       </div>
 
   </div>
@@ -519,7 +607,9 @@
       </section>
     </div>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
     <script src="app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
