--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     rel="icon"
     type="image/png"
     sizes="132x132"
-    href="/images/cycler1-.png"/>
+    href="./images/cycler1-.png"/>
 
 
 
