--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
     <!-- Services Section -->
-    <section class="scroll-element" id = "about">
+    <section class="" id = "about">
       
       <div class="services">
         <div class="services__container">
@@ -476,10 +476,10 @@
           <div class="column">
               <div class="team  js-scroll slide-down">
                   <div class="team-img">
-                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                      <img src="/images/photographer1.jpg" alt="Team Image">
                   </div>
                   <div class="team-content">
-                      <h2>Steven</h2>
+                      <h2>Cyclers</h2>
                       <h3>CEO & Founder</h3>
                       <p>Some text goes here that describes about team members</p>
                       <h4>abc@gmail.com</h4>
@@ -497,10 +497,10 @@
           <div class="column">
               <div class="team  js-scroll slide-down">
                   <div class="team-img">
-                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                      <img src="/images/photographer2.jpg" alt="Team Image">
                   </div>
                   <div class="team-content">
-                      <h2>Mayra</h2>
+                      <h2>Cyclers</h2>
                       <h3>Art Director</h3>
                       <p>Some text goes here that describes about team members</p>
                       <h4>abc@gmail.com</h4>
@@ -518,10 +518,10 @@
           <div class="column">
               <div class="team  js-scroll slide-down">
                   <div class="team-img">
-                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                      <img src="/images/videographer.jpg" alt="Team Image">
                   </div>
                   <div class="team-content">
-                      <h2>John</h2>
+                      <h2>Cyclers</h2>
                       <h3>Developer</h3>
                       <p>Some text goes here that describes about team members</p>
                       <h4>abc@gmail.com</h4>
@@ -539,10 +539,10 @@
           <div class="column">
               <div class="team  js-scroll slide-down">
                   <div class="team-img">
-                      <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                      <img src="/images/marketing_manager.jpg" alt="Team Image">
                   </div>
                   <div class="team-content">
-                      <h2>Jennifer</h2>
+                      <h2>Cyclers</h2>
                       <h3>Designer</h3>
                       <p>Some text goes here that describes about team members</p>
                       <h4>abc@gmail.com</h4>
@@ -563,10 +563,10 @@
           <div class="column">
             <div class="team  js-scroll slide-left">
                 <div class="team-img">
-                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                    <img src="images/marketing_manager.jpg" alt="Team Image">
                 </div>
                 <div class="team-content">
-                    <h2>Steven</h2>
+                    <h2>Cyclers</h2>
                     <h3>CEO & Founder</h3>
                     <p>Some text goes here that describes about team members</p>
                     <h4>abc@gmail.com</h4>
@@ -584,10 +584,10 @@
         <div class="column">
             <div class="team  js-scroll slide-left">
                 <div class="team-img">
-                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                    <img src="/images/photographer1.jpg" alt="Team Image">
                 </div>
                 <div class="team-content">
-                    <h2>Mayra</h2>
+                    <h2>Cyclers</h2>
                     <h3>Art Director</h3>
                     <p>Some text goes here that describes about team members</p>
                     <h4>abc@gmail.com</h4>
@@ -605,10 +605,10 @@
         <div class="column">
             <div class="team  js-scroll slide-right">
                 <div class="team-img">
-                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                    <img src="/images/photographer2.jpg" alt="Team Image">
                 </div>
                 <div class="team-content">
-                    <h2>John</h2>
+                    <h2>Cyclers</h2>
                     <h3>Developer</h3>
                     <p>Some text goes here that describes about team members</p>
                     <h4>abc@gmail.com</h4>
@@ -626,10 +626,10 @@
         <div class="column">
             <div class="team  js-scroll slide-right" >
                 <div class="team-img">
-                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="Team Image">
+                    <img src="/images/videographer.jpg" alt="Team Image">
                 </div>
                 <div class="team-content">
-                    <h2>Jennifer</h2>
+                    <h2>Cyclers</h2>
                     <h3>Designer</h3>
                     <p>Some text goes here that describes about team members</p>
                     <h4>abc@gmail.com</h4>
@@ -693,12 +693,14 @@
               </center> -->
           </div>
 
-          <div><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fcyclersstudio&tabs=timeline%2C%20messages&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="200" height="320" style="border:none;overflow:hidden" padding ="0px" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          <div><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fcyclersstudio&tabs=timeline%2C%20messages&width=500&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="290" style="border:none;overflow:hidden" padding ="0px" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
 
           </div> 
         </div>
       </div>
+
+      <div class="contact-section" id ="contact">
 
       <div class="contact js-scroll slide-up" id="contact">
         <div>
@@ -714,7 +716,7 @@
           </div>
         </div>
       </div>
-
+    </div>
 
 
       <section class="social__media">
