--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cyclers Studios</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous"
@@ -652,6 +652,28 @@
   </div>
 </section>
 
+
+<section>
+
+  <div class="contact-section" id ="contact">
+
+    <div class="contact js-scroll slide-up" id="contact">
+      <div>
+        <h5>SUBSCRIBE TO CYCLERS</h5>
+        <p>
+          For Latest News, Blog Posts, Concerts, Events
+        </p>
+      </div>
+      <div class="input-div">
+        <input type="text" placeholder="enter email address..." />
+        <div class="send-div">
+          <a href=""><img src="./images/send.png" alt="send" /></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section>
   <div class="client">
   </div>
@@ -663,7 +685,7 @@
     <footer>
     <div class="footer__container">
 
-      <div class="footer__links js-scroll slide-down">
+      <div class="footer__links js-scroll slide-up">
         <div class="footer__link--wrapper">
           <div class="footer__logo">
             <img src="/images/cycler1-.png" alt="" srcset="">
@@ -700,29 +722,13 @@
         </div>
       </div>
 
-      <div class="contact-section" id ="contact">
-
-      <div class="contact js-scroll slide-up" id="contact">
-        <div>
-          <h5>TALK TO CYCLERS</h5>
-          <p>
-            For Bookings, Enquiries, Business, etc, contact us below
-          </p>
-        </div>
-        <div class="input-div">
-          <input type="text" placeholder="enter email address..." />
-          <div class="send-div">
-            <a href=""><img src="./images/send.png" alt="send" /></a>
-          </div>
-        </div>
-      </div>
-    </div>
+      
 
 
       <section class="social__media">
         <div class="social__media--wrap">
 
-          <p class="website__rights">© CYCLERS 2022.</p>
+          <p class="website__rights">© CYCLERS STUDIOS. <script>document.write(new Date().getFullYear())</script></p>
           <div class="social__icons">
             <a
               class="social__icon--link"
@@ -770,9 +776,9 @@
     </div>
   </footer>
     
-    <script src="app.js"></script>
-    <script src="scroll.js"></script>
-    <script src="carousel.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/carousel.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
