--- a/index.html
+++ b/index.html
@@ -482,7 +482,10 @@
                       <h2>Cyclers</h2>
                       <h3>CEO & Founder</h3>
                       <p>Some text goes here that describes about team members</p>
-                      <h4>abc@gmail.com</h4>
+                      <h4><!-- Add font awesome icons -->
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a></h4></h4>
                   </div>
                   <div class="team-social">
                       <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -503,7 +506,10 @@
                       <h2>Cyclers</h2>
                       <h3>Art Director</h3>
                       <p>Some text goes here that describes about team members</p>
-                      <h4>abc@gmail.com</h4>
+                      <h4><!-- Add font awesome icons -->
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a></h4></h4>
                   </div>
                   <div class="team-social">
                       <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -524,7 +530,10 @@
                       <h2>Cyclers</h2>
                       <h3>Developer</h3>
                       <p>Some text goes here that describes about team members</p>
-                      <h4>abc@gmail.com</h4>
+                      <h4><!-- Add font awesome icons -->
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a></h4></h4>
                   </div>
                   <div class="team-social">
                       <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -545,7 +554,10 @@
                       <h2>Cyclers</h2>
                       <h3>Designer</h3>
                       <p>Some text goes here that describes about team members</p>
-                      <h4>abc@gmail.com</h4>
+                      <h4><!-- Add font awesome icons -->
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a></h4></h4>
                   </div>
                   <div class="team-social">
                       <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -569,7 +581,10 @@
                     <h2>Cyclers</h2>
                     <h3>CEO & Founder</h3>
                     <p>Some text goes here that describes about team members</p>
-                    <h4>abc@gmail.com</h4>
+                    <h4><!-- Add font awesome icons -->
+                      <a href="#" class="fab fa-instagram"></a>
+                      <a href="#" class="fab fa-facebook-f"></a>
+                      <a href="#" class="fab fa-twitter"></a></h4></h4>
                 </div>
                 <div class="team-social">
                     <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -590,7 +605,10 @@
                     <h2>Cyclers</h2>
                     <h3>Art Director</h3>
                     <p>Some text goes here that describes about team members</p>
-                    <h4>abc@gmail.com</h4>
+                    <h4><!-- Add font awesome icons -->
+                      <a href="#" class="fab fa-instagram"></a>
+                      <a href="#" class="fab fa-facebook-f"></a>
+                      <a href="#" class="fab fa-twitter"></a></h4></h4>
                 </div>
                 <div class="team-social">
                     <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -611,7 +629,10 @@
                     <h2>Cyclers</h2>
                     <h3>Developer</h3>
                     <p>Some text goes here that describes about team members</p>
-                    <h4>abc@gmail.com</h4>
+                    <h4><!-- Add font awesome icons -->
+                      <a href="#" class="fab fa-instagram"></a>
+                      <a href="#" class="fab fa-facebook-f"></a>
+                      <a href="#" class="fab fa-twitter"></a></h4></h4>
                 </div>
                 <div class="team-social">
                     <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
@@ -633,17 +654,17 @@
                     <h3>Designer</h3>
                     <p>Some text goes here that describes about team members</p>
                     <h4>        <!-- Add font awesome icons -->
-                      <a href="#" class="fa fa-linkedin"></a>
-                      <a href="#" class="fa fa-pinterest"></a>
-                      <a href="#" class="fa fa-reddit"></a></h4>
+                      <a href="#" class="fab fa-instagram"></a>
+                      <a href="#" class="fab fa-facebook-f"></a>
+                      <a href="#" class="fab fa-twitter"></a></h4>
                 </div>
-                <div class="team-social">
-                    <a href="#" class="social-tw"> <i class="fa fa-twitter"></i></a>
+                <!-- <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
                     <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
                     <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
-                </div>
+                </div> -->
             </div>
         </div>
         
