--- a/index.html
+++ b/index.html
@@ -271,9 +271,7 @@
                   </div>
               </div>
               <div class="all-in-one">
-                <iframe width="420" height="315"
-                src="https://www.youtube.com/embed/pSTqorxDhz4">
-                </iframe>
+                <iframe width="460" height="315" src="https://www.youtube.com/embed/pSTqorxDhz4?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class="media-description">
                       
                   </div>
@@ -755,7 +753,7 @@
 
           
 
-          <p class="website__rights">© CYCLERS STUDIOS. <script>document.write(new Date().getFullYear())</script></p>
+          <p class="website__rights js-scroll slide-up">© CYCLERS STUDIOS. <script>document.write(new Date().getFullYear())</script></p>
           <div class="social__icons">
             <a
               class="social__icon--link"
