--- a/index.html
+++ b/index.html
@@ -743,7 +743,8 @@
               </center>
           </div> -->
 
-          <div><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fcyclersstudio&tabs=timeline%2C%20messages&width=500&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="290" style="border:none;overflow:hidden" padding ="0px" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          <div class="iframz">
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fcyclersstudio&tabs=timeline%2C%20messages&width=500&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="290" style="border:none;overflow:hidden" padding ="0px" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
 
           </div> 
@@ -759,7 +760,7 @@
 
           
 
-          <p class="website__rights js-scroll slide-up">© CYCLERS STUDIOS. <script>document.write(new Date().getFullYear())</script></p>
+          <p class="website__rights ">© CYCLERS STUDIOS. <script>document.write(new Date().getFullYear())</script></p>
           <div class="social__icons">
             <a
               class="social__icon--link"
