--- a/index.html
+++ b/index.html
@@ -1,45 +1,116 @@
 <html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <link rel="stylesheet" href="landing.css">
-    <title>Image Slider</title>
-  </head>
-  <body>
-    <h1>WELCOME TO CYCLERS STUDIO</h1>
-    <div class="slide-container">
-      <div class="slide fade">
-        <img src='images/photographer2.jpg' alt=''>
-      </div>
-      <div class="slide fade">
-        <img src='images/photographer1.jpg' alt=''>
-      </div>
-      <div class="slide fade">
-        <img src='images/marketing_manager.jpg' alt=''>
-      </div>
-      <div class="slide fade">
-        <img src='images/photographer1.jpg' alt=''>
-      </div>
+    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
 
-      <a href="#" class="prev" title="Previous">&#10094</a>
-      <a href="#" class="next" title="Next">&#10095</a>
+    <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
+    <link rel="stylesheet" href="landing/landing.css">
+    <title>WELCOME TO CYCLERS STUDIO</title>
+</head>
+
+<body>
+    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
+
+
+    <div class="gallery">
+        <div class="gallery__column">
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/1.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/5.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/11.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="gallery__column">
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/12.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/2.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/3.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="gallery__column">
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/4.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/9.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/10.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="gallery__column">
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/6.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/7.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/8.jpg" alt="" class="gallery__image">
+                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                </figure>
+            </a>
+        </div>
     </div>
-    <div class="dots-container">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
+</body>
 
-
-    <div>
-        <button><a href="home.html">next</a></button>
-    </div>
-
-    <script src="landing.js"></script>
-  </body>
 </html>
